force-app/main/default/objects/Deposit__c/Deposit__c.object-meta.xml
<CustomObject>
    <label>Deposit</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>