force-app/main/default/objects/Deposit__c/fields/Original_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Original_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Deposit</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>