force-app/main/default/objects/Deposit__c/fields/Slit_Code__c.field-meta.xml
<CustomField>
    <fullName>Slit_Code__c</fullName>
    <label>Slit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>